# rebirth2024

./: .gitignore  README.md  functions.py  loadingmemmap.ipynb  pyproject.toml  rebirth2024.code-workspace  requirements.txt  setup.py  sketchbook.ipynb  todolist.md
notebooks/: create_memmaps_from_tif.ipynb  loading_memmaps.ipynb  point_segmentation.ipynb
rebirth/utils/: display_utils.py  stardist_utils.py  tif_memmap_utils.py
